k8s/hello-world/ingress.yml
#Super simple example of setting up ingress
#kubectl create deployment web --image=gcr.io/google-samples/hello-app:1.
#kubectl expose deployment web --type=NodePort --port=8080
#kubectl get service web
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: hello-world.info
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web
            port:
              number: 8080
